<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="crew">Crew</string>
    <string name="profile">Profile</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="see_all">See All</string>
    <string name="status">Status</string>
    <string name="original_title">Original Title</string>
    <string name="overview">Overview</string>
    <string name="lang">eng</string>
    <string name="trailers_and_videos">Trailers and Videos</string>
    <string name="command_crew">Command Crew</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="recommendations">Recommendations</string>
    <string name="hours">h</string>
    <string name="minutes">m</string>
    <string name="released">Released</string>
    <string name="notRealised">Not Released</string>
    <string name="trending">Trending</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_thr_air">On The Air</string>
    <string name="current_season">Current season</string>
    <string name="people">People</string>
    <string name="biography">Biography</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>
    <string name="years_of_life">years of life</string>
    <string name="rated">Rated</string>
    <string name="saved">Saved</string>
    <string name="about_app">About App</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>

</resources>