<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".detail.DetailScreen">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <ImageView
            android:id="@+id/background_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_background" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/detail_screen_poster_grad" />

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Deadpool"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/poster_card"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="80dp"
                    app:cardBackgroundColor="#595960"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_title">

                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/rate_frame"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:maxLength="3"
                    android:text="7.9"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toStartOf="@id/lang"
                    app:layout_constraintStart_toEndOf="@id/poster_card"
                    app:layout_constraintTop_toTopOf="@id/poster_card" />

                <TextView
                    android:id="@+id/lang"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/lang_frame"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="EN"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@id/rate"
                    app:layout_constraintTop_toTopOf="@id/poster_card" />

                <ImageView
                    android:id="@+id/duration_ic"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_duration"
                    app:layout_constraintStart_toStartOf="@id/rate"
                    app:layout_constraintTop_toBottomOf="@id/rate" />

                <TextView
                    android:id="@+id/duration_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_regular"
                    android:text="1h 39m"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/duration_ic"
                    app:layout_constraintTop_toTopOf="@id/duration_ic" />

                <ImageView
                    android:id="@+id/date_ic"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_calendar"
                    app:layout_constraintStart_toEndOf="@id/poster_card"
                    app:layout_constraintTop_toBottomOf="@id/duration_ic" />

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_regular"
                    android:text="2024-08-12"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/date_ic"
                    app:layout_constraintTop_toTopOf="@id/date_ic" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/font_medium"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/poster_card"
                    app:layout_constraintTop_toBottomOf="@id/date_ic" />

                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="Realised"
                    android:textColor="#00FF0A"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/status"
                    app:layout_constraintTop_toBottomOf="@id/status" />

                <TextView
                    android:id="@+id/original_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/original_title"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/poster_card"
                    app:layout_constraintTop_toBottomOf="@id/status_text" />

                <TextView
                    android:id="@+id/original_title_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/font_italic"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/original_title"
                    app:layout_constraintTop_toBottomOf="@id/original_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/genre_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/poster_card"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_genre" />

                <TextView
                    android:id="@+id/over_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/font_medium"
                    android:text="@string/overview"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genre_recycler" />

                <TextView
                    android:id="@+id/overview_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/font_italic"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/over_view"
                    app:layout_constraintTop_toBottomOf="@id/over_view" />

                <TextView
                    android:id="@+id/overview_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/font_regular"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview_2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/font_medium"
                        android:text="@string/trailers_and_videos"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/trailer_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_youtube" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/font_medium"
                        android:text="@string/command_crew"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/actors_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_crew" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/font_medium"
                        android:text="@string/similar_movies"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/similar_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_child" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/font_medium"
                        android:text="@string/recommendations"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recomm_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_child" />


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>


</FrameLayout>